# slPlugins

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md  azure-pipelines.yml  release.sh  release_uploader.sh  tag.sh  updateall.sh
modules/: CMakeLists.txt  setup_modules.cmake
plugins/: CMakeLists.txt  install_template.cmake
plugins/AB Tester/: AB Tester.jucer
plugins/AB Tester/JuceLibraryCode/: AppConfig.h  JuceHeader.h
plugins/AB Tester/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/ABTester/: ABTester.jucer  CMakeLists.txt  crashreporter.json
plugins/ABTester/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/AddInvert/: AddInvert.jucer  CMakeLists.txt  crashreporter.json
plugins/AddInvert/JuceLibraryCode/: AppConfig.h  JuceHeader.h
plugins/AddInvert/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/Channel Mute/: Channel Mute.jucer
plugins/Channel Mute/JuceLibraryCode/: AppConfig.h  JuceHeader.h
plugins/Channel Mute/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/ChannelMute/: CMakeLists.txt  Changelist.txt  ChannelMute.jucer  crashreporter.json
plugins/ChannelMute/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/CompensatedDelay/: CMakeLists.txt  Changelist.txt  CompensatedDelay.jucer  crashreporter.json
plugins/CompensatedDelay/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/Compressor/: CMakeLists.txt  Changelist.txt  Compressor.jucer  crashreporter.json
plugins/Compressor/Resources/: Acoustic Guitar.xml  Electric Guitar.xml
plugins/Compressor/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/Crossfeed/: CMakeLists.txt  Changelist.txt  crashreporter.json
plugins/Crossfeed/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/Delay/: CMakeLists.txt  Changelist.txt  Delay.jucer  crashreporter.json
plugins/Delay/Resources/: Dotted Eighth.xml  Eighth Note.xml  Long Ambient.xml  Ping Pong.xml  Quarter Note.xml  Slapback.xml
plugins/Delay/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/EQ3/: CMakeLists.txt  Gate.jucer
plugins/EQ3/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/Echo/: Echo.jucer
plugins/Echo/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/Expander/: CMakeLists.txt  Expander.jucer  crashreporter.json
plugins/Expander/Resources/: Aggressive.xml  Drums.xml  Gentle.xml  Moderate.xml  Vocals.xml
plugins/Expander/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/Formula/: Formula.jucer
plugins/Formula/JuceLibraryCode/: AppConfig.h  JuceHeader.h  include_gin_plugin.cpp  include_gin_plugin.mm
plugins/Formula/Source/: FormulaSynth.cpp  FormulaSynth.h  FormulaVoice.cpp  FormulaVoice.h  Oscillator.cpp  Oscillator.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Utilities.cpp  Utilities.h
plugins/Gate/: CMakeLists.txt  Changelist.txt  Gate.jucer  crashreporter.json
plugins/Gate/Resources/: Drums.xml  Gentle.xml  Guitar.xml  Tight.xml  Vocals.xml
plugins/Gate/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/GraphicEQ/: CMakeLists.txt  Changelist.txt  crashreporter.json
plugins/GraphicEQ/Resources/: Bass Boost.xml  Flat.xml  Mid Scoop.xml  Smile Curve.xml  Telephone.xml  Treble Boost.xml  Vocal Presence.xml
plugins/GraphicEQ/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/HugeGain/: CMakeLists.txt  HugeGain.jucer  crashreporter.json
plugins/HugeGain/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/Keyboard/: CMakeLists.txt  Keyboard.jucer
plugins/Keyboard/JuceLibraryCode/: AppConfig.h  JuceHeader.h  include_gin_dsp.cpp  include_gin_dsp.mm
plugins/Keyboard/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/Limiter/: CMakeLists.txt  Changelist.txt  Limiter.jucer  crashreporter.json
plugins/Limiter/Resources/: Aggressive.xml  Bass Guitar.xml  Brickwall.xml  (+7 more)
plugins/Maths/: CMakeLists.txt  Maths.jucer  crashreporter.json
plugins/MidiLooper/: CMakeLists.txt  crashreporter.json
plugins/MidiMonitor/: CMakeLists.txt  Changelist.txt  crashreporter.json
plugins/Oscilloscope/: CMakeLists.txt  Changelist.txt  Oscilloscope.jucer  crashreporter.json
plugins/PitchTrack/: CMakeLists.txt  Changelist.txt  PitchTrack.jucer  crashreporter.json
plugins/SFX/: Maths.jucer  SFX.jucer
plugins/SFX8/: CMakeLists.txt  Changelist.txt  SFX8.jucer  crashreporter.json
plugins/SampleDelay/: CMakeLists.txt  SampleDelay.jucer  crashreporter.json
plugins/SimpleVerb/: CMakeLists.txt  Changelist.txt  SimpleVerb.jucer  crashreporter.json
plugins/Spectrum Analyzer/: Spectrum Analyzer.jucer
plugins/SpectrumAnalyzer/: CMakeLists.txt  SpectrumAnalyzer.jucer  crashreporter.json
plugins/StereoEnhancer/: CMakeLists.txt  Changelist.txt  StereoEnhancer.jucer  crashreporter.json
plugins/StereoProcessor/: CMakeLists.txt  Changelist.txt  StereoProcessor.jucer  crashreporter.json
plugins/Tone Generator/: Tone Generator.jucer
plugins/ToneGenerator/: CMakeLists.txt  Changelist.txt  ToneGenerator.jucer  crashreporter.json
plugins/WaveLooper/: CMakeLists.txt  Changelist.txt  Maths.jucer  WaveLooper.jucer  crashreporter.json
plugins/XY Plot/: XY Plot.jucer
plugins/XYScope/: CMakeLists.txt  Changelist.txt  XYScope.jucer  crashreporter.json
plugins/sl3AM/: sl3AM.jucer
plugins/slCrossfeed/: CMakeLists.txt  slCrossfeed.jucer
plugins/slOocilliscope/: slOscilliscope.jucer
plugins/slOscilloscope/: slOscilloscope.jucer
plugins/slPitchTrack/: slPitchTrack.jucer
plugins/slTone/: slTone.jucer
(+690 files in other folders)
