cmake_minimum_required(VERSION 3.15)

add_subdirectory(juce)
if(NOT TARGET juce_vst2_sdk)
    juce_set_vst2_sdk_path(${CMAKE_CURRENT_LIST_DIR}/plugin_sdk/vstsdk2.4)
endif()

juce_add_module(dRowAudio/module/dRowAudio)
juce_add_module(gin/modules/gin)
juce_add_module(gin/modules/gin_dsp)
juce_add_module(gin/modules/gin_simd)
juce_add_module(gin/modules/gin_gui)
juce_add_module(gin/modules/gin_metadata)
juce_add_module(gin/modules/gin_network)
juce_add_module(gin/modules/gin_plugin)
juce_add_module(gin/modules/gin_graphics)
juce_add_module(gin/modules/gin_standaloneplugin)
juce_add_module(pitch_detector)
juce_add_module(audio_fft)
