add_subdirectory(ABTester)
add_subdirectory(AddInvert)
add_subdirectory(ChannelMute)
add_subdirectory(CompensatedDelay)
add_subdirectory(Compressor)
add_subdirectory(Delay)
add_subdirectory(HugeGain)
add_subdirectory(Limiter)
add_subdirectory(Maths)
add_subdirectory(Oscilloscope)
add_subdirectory(SFX8)
add_subdirectory(SampleDelay)
add_subdirectory(SpectrumAnalyzer)
add_subdirectory(ToneGenerator)
