add_subdirectory(ABTester)
add_subdirectory(AddInvert)
add_subdirectory(ChannelMute)
add_subdirectory(CompensatedDelay)
add_subdirectory(Compressor)
add_subdirectory(Delay)
add_subdirectory(EQ3)
add_subdirectory(Expander)
add_subdirectory(Gate)
add_subdirectory(HugeGain)
add_subdirectory(Keyboard)
add_subdirectory(Limiter)
add_subdirectory(Maths)
add_subdirectory(Oscilloscope)
add_subdirectory(PitchTrack)
add_subdirectory(SFX8)
add_subdirectory(SampleDelay)
add_subdirectory(SimpleVerb)
add_subdirectory(SpectrumAnalyzer)
add_subdirectory(StereoEnhancer)
add_subdirectory(StereoProcessor)
add_subdirectory(ToneGenerator)
add_subdirectory(WaveLooper)
add_subdirectory(XYScope)
add_subdirectory(slCrossfeed)
